--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "gsap": "^3.5.1",
+    "primeicons": "^4.1.0",
+    "react-transition-group": "^2.5.1",
+    "primereact": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
