--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "gsap": "^3.5.1",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "react-transition-group": "^2.5.1",
     "primereact": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^2.5.1",
     "redux": "^4.0.5",
     "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
